# Gengine

./: CMakeLists.txt  README.md  bNr.sh  main.cpp
scripts/: bNr.ps1  bNr.sh  newBuild.ps1  newBuild.sh
